# pipoco

./: .gitignore  .requirements.txt  Cargo.toml  README.md  requirements.txt
src/: constants.rs  main.rs  openaiutil.py  randxv.py
src/algorithm/: algorithm.rs  enums.rs  mod.rs
src/commands/: acende.rs  ai.rs  dalle.rs  dollar.rs  game.rs  gpt.rs  mod.rs  sticker.rs  wiki.rs  xcomment.rs
src/fixtures/: test_ai_response.json
