[package]
name = "rojaumbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frankenstein = "0.21"
rand = "0.8.5"
thiserror = "1.0.38"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.68"
