[package]
name = "rojaumbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frankenstein = "0.21"
rand = "0.8.5"
thiserror = "1.0.38"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0.68"
serde = { version = "1.0.152", features = ["serde_derive", "derive"] }
serde_json = "1.0.91"
reqwest = { version = "0.11.13", features = ["json"] }
convert_case = "0.6.0"

[dependencies.pyo3]
version = "0.16.4"
features = ["auto-initialize"]
