[package]
name = "rojaumbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
frankenstein = "0.21"
rand = "0.8.5"
thiserror = "1.0.38"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "signal"] }
anyhow = "1.0.68"
serde = { version = "1.0.152", features = ["serde_derive", "derive"] }
serde_json = "1.0.91"
reqwest = { version = "0.11.13", features = ["json"] }
convert_case = "0.6.0"
base64 = "0.21.0"
image = "0.24.5"

[dependencies.pyo3]
version = "0.16.4"
features = ["auto-initialize"]
